<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Fragment1">
<RadioGroup
    android:id="@+id/radiogroup"
    android:layout_alignParentTop="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/city_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cities"
        android:checked="true"
        android:layout_weight="1"/>

    <RadioButton
        android:id="@+id/resto_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurants"
        android:layout_weight="1"/>

    <RadioButton
        android:id="@+id/hotel_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotels"
        android:layout_weight="1"/>

</RadioGroup>


    <!--<EditText-->
        <!--android:id="@+id/search_box"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/radiogroup"-->
        <!--android:hint="@string/search_name"-->
        <!--android:imeOptions="actionDone"-->
        <!--android:inputType="text"-->
        <!--android:textSize="14sp" />-->


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiogroup"
        android:orientation="horizontal">

        <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/frag1button_height"
        android:layout_weight="1"
        android:text="@string/search_places"
        android:textSize="@dimen/frag1_txt_size" />


        <Button
            android:id="@+id/user_loc"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/frag1button_height"
            android:layout_weight="0.8"
            android:text="User Location"
            android:textSize="@dimen/frag1_txt_size" />

        <Button
            android:id="@+id/new_search"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/frag1button_height"
            android:layout_weight="1"
            android:text="@string/new_search"
            android:textSize="@dimen/frag1_txt_size" />
        <Button
            android:id="@+id/free_map"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="Free Map"
            android:textSize="@dimen/frag1_txt_size"

            />
    </LinearLayout>



    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:padding="0dp"
        android:scrollbars="vertical" />



</RelativeLayout>



    <!--android:onClick="freeMap"-->


    <!--<Button-->
    <!--android:id="@+id/alertButton"-->
    <!--android:layout_below="@+id/buttons"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Directions"-->
    <!--android:textSize="12sp"-->
    <!--android:padding="5dp"-->
    <!--/>-->
